Fix: Nav wrapper에 z-index 추가

--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,4 +1,3 @@
-// common.scss 올릴 거 (팀원과 상의 후 반영하고 지울예정.)
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
@@ -11,11 +10,11 @@
 }
 
 .NavHeader {
-  position: absolute;
   top: 0px;
   left: 0px;
   right: 0px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.06);
+  z-index: 100;
 
   .nav {
     position: relative;
@@ -41,12 +40,12 @@
           > h1 {
             @include atag;
             float: left;
-            width: 100px;
-            margin: 5px 20px 0;
+            width: 110px;
+            margin: 10px 20px 0;
             font-family: 'Staatliches', cursive;
             font-style: italic;
             font-weight: 900;
-            font-size: 45px;
+            font-size: 40px;
           }
         }
       }
